--- a/markup/home/exam2/index.html
+++ b/markup/home/exam2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Exam work</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 </head>
 <body>
 
@@ -12,34 +12,32 @@
 
 
     <div class="header">
-<header>
-    <div class="logo">
-        <a href="#"><span>Officetime</span><br />Officetime a psd template</a>
-    </div>
+        <header>
+            <div class="logo">
+                <a href="#"><span>Officetime</span><br />Officetime a psd template</a>
+            </div>
 
-    <nav>
-        <ul class="main_menu">
+            <nav>
+                <ul class="main_menu">
 
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Blog</a>
-                  <ul class="sub_menu"> <!--class="submenu">-->
-                        <li><a href="#">Articles <br />
-                            <span class="text_mark">this text is complementary</span>
-                        </a></li><hr>
-                        <li><a href="#">Writers</a></li><hr>
-                        <li><a href="#">Top 50</a></li><hr>
-                        <li><a href="#">The Hall of Fame</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">Help</a></li>
-                <button class="button_menu">Apply Now</button>
-
-
-        </ul>
-    </nav>
-</header>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Blog</a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Articles <br />
+                                <span class="text_mark">this text is complementary</span>
+                            </a></li><hr>
+                            <li><a href="#">Writers</a></li><hr>
+                            <li><a href="#">Top 50</a></li><hr>
+                            <li><a href="#">The Hall of Fame</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Help</a></li>
+                    <button class="button_menu">Apply Now</button>
+                </ul>
+            </nav>
+        </header>
     </div> <!--end header-->
 
     <div class="slider_content">
@@ -60,6 +58,7 @@
         <button class="button_slider">
             Watch Trailer<br />
             <span>in 720p Quality</span>
+            <hr class="vertical">
             <div class="button_arrow"></div>
         </button>
 
@@ -67,19 +66,22 @@
     </div> <!--end slider_content-->
 
     <div class="block_nature">
-<h2>The Undiscovered Beauty</h2>
+        <h2>The Undiscovered Beauty</h2>
 
         <div class="nature_content">
-<div class="nature_image_container">
-    <img src="images/nature1.png"/>
-    <div class="images_buttons_hover">
-        <a href="#" class="button_hover_download"><div class="download"></div></a>
-        <a href="#" class="button_hover_zoom"><div class="zoom"></div></a>
-        <a href="#" class="buton_hover_file"><div class="file"></div></a>
-    </div>
-    <h3>Vehicula Inceptos Pharetra</h3>
-    <p>Aenean eu leo quam. Pellentesque ornare sem lacinia.</p>
-</div>
+
+            <div class="nature_image_container">
+                <img src="images/nature1.png"/>
+                <div class="mask"></div>
+                <div class="images_buttons_hover">
+                    <a href="#" class="button_hover_download"><div class="download"></div></a>
+                    <a href="#" class="button_hover_zoom"><div class="zoom"></div></a>
+                    <a href="#" class="buton_hover_file"><div class="file"></div></a>
+                </div>
+
+                <h3>Vehicula Inceptos Pharetra</h3>
+                <p>Aenean eu leo quam. Pellentesque ornare sem lacinia.</p>
+            </div>
             <div class="nature_text_container">
                 Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas faucibus
                 mollis interdum. Donec ullamcorper nulla non metus auctor fringilla. Praesent commodo cursus
@@ -91,7 +93,7 @@
         <div class="nature_content">
             <div class="nature_image_container">
                 <img src="images/nature2.png"/>
-
+                <div class="mask"></div>
                 <div class="images_buttons_hover">
                     <a href="#" class="button_hover_download"><div class="download"></div></a>
                     <a href="#" class="button_hover_zoom"><div class="zoom"></div></a>
@@ -111,6 +113,7 @@
         <div class="nature_content">
             <div class="nature_image_container">
                 <img src="images/nature3.png"/>
+                <div class="mask"></div>
                 <div class="images_buttons_hover">
                     <a href="#" class="button_hover_download"><div class="download"></div></a>
                     <a href="#" class="button_hover_zoom"><div class="zoom"></div></a>
@@ -128,51 +131,71 @@
 
     </div> <!--end block_nature-->
 
+    <!--TABS NEW-->
+    <div class="adaptive-tabs">
+        <h2>Ta<span>bbb</span>s get your content in line</h2>
+        <div class="tabs_header">
+            <div class="tabs">
 
-    <div class="tabs">
-        <h2>Ta<em>bbb</em>s get your content in line</h2>
-        <div class="tabs_container">
+                <div class="tab">
+                    <input type="radio" id="tab-1" name="tab-group-1" checked>
+                    <label for="tab-1">Tabbb One</label>
 
-            <div class="tabs_header">
-                <a href="#" class="tab_item_selected">Tabbb One</a>
-                <a href="#" class="tab_item">Tabbb Two</a>
-                <a href="#" class="tab_item">Tabbb Three</a>
+                    <div class="content">
+                        <p>You content can be <span>highlighted</span> like this.</p>
+                        <hr>
+                        <div class="column-content">
+                            <ul>
+                                <li><div class="bullet"></div>Magna Porta</li>
+                                <li><div class="bullet"></div>Cras Amet Pharetra</li>
+                                <li><div class="bullet"></div>Ornare Dolor Pharetra</li>
+                                <li><div class="bullet"></div>Nibh Sit Elit</li>
+                                <li><div class="bullet"></div>Venenatis Tortor Aenean</li>
+                            </ul>
+                        </div>
+
+                        <div class="column-content">
+                            <img src="images/img1_tab.jpg">
+                            <h4>Type a Title</h4>
+                            <p>Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet
+                                magna.</p>
+                        </div>
+
+                        <div class="column-content">
+                            <img src="images/img2_tab.jpg">
+                            <h4>Type a Title</h4>
+                            <p>Donec id elit non mi porta gravida at eget metus.</p>
+                        </div>
+                    </div>
+                </div><!--end 1 tab-->
+
+                <div class="tab">
+                    <input type="radio" id="tab-2" name="tab-group-1">
+                    <label for="tab-2">Tabbb Two</label>
+
+                    <div class="content">
+                        <p>Content of Tabbb Two</p>
+                    </div>
+                </div>
+
+                <div class="tab">
+                    <input type="radio" id="tab-3" name="tab-group-1">
+                    <label for="tab-3">Tabbb Three</label>
+
+                    <div class="content">
+                        <p>Content of Tabbb Three</p>
+                    </div>
+                </div>
+
             </div>
+        </div>
 
-            <div class="tab1_content">
-                <h3>You content can be <span>highlighted</span> like this.</h3>
-                <hr>
-                <div class="column">
-                    <ul>
-                        <li>Magna Porta</li>
-                        <li>Cras Amet Pharetra</li>
-                        <li>Ornare Dolor Pharetra</li>
-                        <li>Nibh Sit Elit</li>
-                        <li>Venenatis Tortor Aenean</li>
-                    </ul>
-                </div>
-                <div class="column">
-                    <img src="images/img1_tab.jpg">
-                    <h4>Type a Title</h4>
-                    <p>Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet
-                        magna.</p>
-                </div>
-                <div class="column">
-                    <img src="images/img2_tab.jpg">
-                    <h4>Type a Title</h4>
-                    <p>Donec id elit non mi porta gravida at eget metus.</p>
-                </div>
-            </div>
 
-            <div class="tab2_content"></div>
-
-            <div class="tab3_content"></div>
-        </div> <!--close .tabs_container-->
-        <hr>
-    </div> <!--close .tabs-->
+    </div> <!--end adaptive tabs-->
 
     <footer>
         <div class="footer">
+            <hr>
             <div class="footer_menu">
                 <h3>SINGLE MENU TITLE</h3>
                 <ul>
@@ -202,7 +225,7 @@
                     <li><h4>
                         <a href="#">Fusce Etiam Bibendum</a>
                     </h4>
-                    <p>Sed posuere consectetur est at lobortis.</p>
+                        <p>Sed posuere consectetur est at lobortis.</p>
                     </li>
 
                     <li><h4>
